feat: enhance ApiRequest and CollaboratorsMapper for improved ID handling and readability